# requests_u

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  flake.nix  pyproject.toml
.github/workflows/: bandit.yml  codeql.yml
requests_u/: TextContainer.py  helpers.py  loader_helper.py  main.py  models.py
requests_u/MainPage/: LoadedModels.py  NotLoadedModels.py  models.py
requests_u/MainPage/renovels/: models.py
requests_u/MainPage/tlrulate/: models.py
requests_u/domain/entities/: chapters.py  main_page.py  saver_context.py
requests_u/domain/exceptions/: base.py
requests_u/general/: Raiser.py  RaiserDecarators.py  bs4_helpers.py  helpers.py
requests_u/general/exceptions/: Raiser.py  helpers.py
requests_u/logic/: ChapterLoader.py  ImageLoader.py  MainPageLoader.py  Saver.py
requests_u/logic/MainPage/: renovels.py  tlrulate.py
src/: containers.py  main.py  models.py  pytest_timeout.py
src/config/: __init__.py  data.py
src/core/: __init__.py  exceptions.py  saver.py  saver_chapter_connector.py
src/domain/: __init__.py  chapters.py  images.py  main_page.py  saver_context.py
src/domain/entities/: chapters.py  saver_context.py
src/domain/exceptions/: __init__.py
src/general/: Raiser.py  RaiserDecarators.py  bs4_helpers.py  helpers.py
src/general/exceptions/: Raiser.py  base.py  helpers.py
src/infra/console/: settings_provider.py
src/infra/exceptions/: __init__.py  base.py
src/infra/loader/: basic_image.py
src/infra/main_page/: exceptions.py  ifreedom.py  parsing.py  ranobes.py  renovels.py  tlrulate.py
src/infra/main_page/renovels/: __init__.py  chapter_loader.py  main_page_loader.py  models.py  renovels.py
src/infra/saver/: __init__.py  ebook.py  files.py
src/logic/: ChapterLoader.py  ImageLoader.py  MainPageLoader.py  Saver.py  __init__.py  saver.py  saver_chapter_connector.py  settings_provider.py
src/logic/MainPage/: renovels.py
src/logic/exceptions/: __init__.py  base.py
src/logic/loader/: __init__.py  basic_image.py  chapter.py  image.py  main_page.py
src/logic/main_page/: renovels.py  tlrulate.py
src/logic/saver/: ebook.py  files.py
src/loguru/: __init__.py
src/settings/: config.py
src/tests/domain/: test_main_page.py
src/utils/: __init__.py  bs4.py  console.py  directroy.py  exceptions.py  saver.py  trim.py
src/yarl/: __init__.py
tests/: test_main.py
tests/domain/: test_chapters.py  test_exceptions.py  test_images.py  test_main_page.py  test_saver_context.py
tests/infra/main_page/: test_ifreedom_parsers.py  test_ranobes_parsers.py  test_tlrulate_parsers.py
tests/logic/: test_ebook_saver.py
tests/logic/main_page/: test_renovels.py
tests/logic/saver/: test_ebook_saver.py
tests/other/: test_ex.py
tests/utils/: test_trim.py
