[tool.poetry]
name = "requests-u"
version = "1.0.0"
description = ""
authors = ["nik <i@nikmosi.ru>"]
readme = "README.md"
packages = [{include = "requests_u"}]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.3"
fake-useragent = "^1.2.1"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.0"
aiohttp = "^3.8.5"
pydantic = "^2.2.1"
aiodns = "^3.0.0"
aiofiles = "^23.2.1"
ebooklib = "^0.18"


[build-system]
requires = ["poetry-core", "fzf"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
mccabe.max-complexity = 10
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
select = ["E", "F", "UP", "I", "B"]
ignore = []

[tool.isort]
profile = "black"
