[project]
name = "requests-u"
version = "1.0.0"
description = ""
authors = [
    {name = "nikmosi", email = "i@nikmosi.ru"},
]
dependencies = [
    "lxml>=4.9.3",
    "fake-useragent>=1.2.1",
    "beautifulsoup4>=4.12.2",
    "loguru>=0.7.0",
    "aiohttp>=3.8.5",
    "pydantic>=2.2.1",
    "aiodns>=3.0.0",
    "aiofiles>=23.2.1",
    "ebooklib>=0.18",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
mccabe.max-complexity = 10
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "UP", "I", "B"]
ignore = []

[tool.isort]
profile = "black"
