[project]
name = "requests-u"
version = "1.0.0"
description = ""
authors = [
    {name = "nikmosi", email = "i@nikmosi.ru"},
]
dependencies = [
    "lxml>=4.9.3",
    "fake-useragent>=1.2.1",
    "beautifulsoup4>=4.12.2",
    "loguru>=0.7.0",
    "aiohttp>=3.8.5",
    "pydantic>=2.2.1",
    "aiodns>=3.0.0",
    "aiofiles>=23.2.1",
    "ebooklib>=0.18",
    "pytest>=8.2.2",
    "pytest-timeout>=2.3.1",
    "pydantic-settings>=2.3.4",
    "whatever>=0.7",
    "pipe>=2.2",
    "dependency-injector>=4.44.0",
    "aiolimiter>=1.2.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "fzf-bin>=0.67.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--timeout 300 -v -s --strict-markers -ra"
markers = [
  "asyncio: mark test as using asyncio",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
]


[tool.ruff]
src = ["src", "test"]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
